# thermostat

./: .gitmodules  CMakeLists.txt  LICENSE  lv_conf.h  run
app/: .gitignore  .lvgl-live-preview.json  config.h  main.c  pm.c  pm.h  settings.c  settings.h
app/fonts/: lv_font_montserrat_56.c  lv_font_montserrat_60.c
app/gui/: animations.c  animations.h  battery_charge.c  battery_charge.h  common.c  common.h  navigation.c  navigation.h  ui.c  ui.h
app/gui/element/: background.c  background.h  battery.c  battery.h  notification_bar.c  notification_bar.h  target_temp.c  target_temp.h  temp_picker.c  temp_picker.h
app/gui/screen/: main.c  main.h  set_temperature.c  set_temperature.h  thermometer.c  thermometer.h  thermostat.c  thermostat.h
app/io/: display.c  display.h  io.h  rtc.c
app/sensor/: battery.c  battery.h  rtc.h  thermometer.c  thermometer.h
platform/esp32/: CMakeLists.txt  display.c  main.c
platform/linux/: CMakeLists.txt  config.h  display.c  main.c
platform/stm32/: CMakeLists.txt  display.c  main.c
ui/: project.xml
