cmake_minimum_required(VERSION 3.16)

# TODO Stub.

add_subdirectory(../../vendor/stm32cube stm32cube_build)

#target_sources(stm32_app PRIVATE
#    main.c
#    ../../app/app.c
#    ../../app/gui/ui.c
#    ../../drivers/display/st7789.c
#)
#
#target_include_directories(stm32_app PRIVATE
#    ../../app
#    ../../lv_drivers
#    ../../lvgl
#)
